--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.0.0",
     "@inertiajs/react": "^1.2.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/axios": "^0.14.4",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
@@ -19,7 +20,7 @@
     "@typescript-eslint/parser": "^7.16.0",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.12",
-    "axios": "^1.7.4",
+    "axios": "0.27.2",
     "concurrently": "^9.0.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -38,6 +39,7 @@
     "vite": "^6.0.2"
   },
   "dependencies": {
+    "@inertiajs/core": "^1.2.0",
     "@inertiajs/inertia": "^0.11.1"
   }
 }
